Fix hero footer on small viewports

--- a/src/astro/styles/components/_hero.scss
+++ b/src/astro/styles/components/_hero.scss
@@ -84,7 +84,8 @@
 
     h1,
     h2,
-    p {
+    p,
+    footer {
       // Align any text in the middle.
       text-align: center;
     }
